--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="flaxbox-tp2.css">
+    <link rel="stylesheet" href="flexbox-tp2.css">
     <link rel="stylesheet" href="bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -97,7 +97,10 @@
  <footer>
     <nav class="prlm">
         <div ><h1><textarea class="commentaire"  placeholder="ملاحظاتك"></textarea></h1></div>
-        <div id="footer-above">
+        <div class="email">
+            <ul><input placeholder="ur email" class="input" type="email"><br><br><input placeholder="ur password" class="input" type="password"><br><br><il class="send" type="button">send</il></ul>
+        </div>
+            <div id="footer-above">
             <div class="tawassol">
                 <h3>Find me on</h3>
                 <ul id="contact">
