creat new folder
deplacer les photo dans un fichier >ملابس الحج الرجال

--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
             <ul class="zz">
                 <h1 >ملابس الحج الرجال</h1></ul>
             <ul class="zz">  
-                <div class="ee"><img title="إحرام خاص بالرجال" class="imag" src="vetment1.webp" alt="aa"><p class="ani">إحرام خاص بالرجال<br>50$</p></div>
-                <div class="ee"><img title="إحرام خاص بالأطفال" class="imag" src="evetment2.webp" alt="aa"><p class="ani">إحرام خاص بالأطفال<br>30$</p></div>
-                <div class="ee"><img title="جزء علوي من الإحرام الخاص بالرجال" class="imag" src="vetment3.webp" alt="aa"><p class="ani">جزء علوي من الإحرام<br>30$</p></div>
-                <div class="ee"><img title="تجميعة خاصة بالحجاج" class="imag" src="evetment4.webp" alt="aa"><p class="ani">تجميعة خاصة بالحجاج<br>1000$</p></div>
+                <div class="ee"><img title="إحرام خاص بالرجال" class="imag" src="ملابس الحج الرجال/vetment1.webp" alt="aa"><p class="ani">إحرام خاص بالرجال<br>50$</p></div>
+                <div class="ee"><img title="إحرام خاص بالأطفال" class="imag" src="ملابس الحج الرجال/evetment2.webp" alt="aa"><p class="ani">إحرام خاص بالأطفال<br>30$</p></div>
+                <div class="ee"><img title="جزء علوي من الإحرام الخاص بالرجال" class="imag" src="ملابس الحج الرجال/vetment3.webp" alt="aa"><p class="ani">جزء علوي من الإحرام<br>30$</p></div>
+                <div class="ee"><img title="تجميعة خاصة بالحجاج" class="imag" src="ملابس الحج الرجال/evetment4.webp" alt="aa"><p class="ani">تجميعة خاصة بالحجاج<br>1000$</p></div>
             </ul><br><bp>
             <ul class="zz">
-                <div class="ee"><img title="سروال مريح مع ساعة رائعة وجوارب وحداء دو جودة خيالية" class="imag" src="srwal-wa3r.jpg" alt="aa"><p class="ani">سروال مع ساعة وجوارب وحداء<br>70$</p></div>
-                <div class="ee"><img title="فوقية باردة و رائعة دات جودة جيدة" class="imag" src="fo9ya.webp" alt="aa"><p class="ani">فوقية باردة و دات جودة جيدة<br>50$</p></div>
-                <div class="ee"><img title="غندورة مغربية من صنع اليد" class="imag" src="foukya2.jpg" alt="aa"><p class="ani">غندورة مغربية من صنع اليد<br>50$</p></div>
-                <div class="ee"><img title="طاقية مغربية دات جودة ممتازة" class="imag" src="ta9ya.jpeg" alt="aa"><p class="ani">طاقية مغربية دات جودة ممتازة<br>10$</p></div>
+                <div class="ee"><img title="سروال مريح مع ساعة رائعة وجوارب وحداء دو جودة خيالية" class="imag" src="ملابس الحج الرجال/srwal-wa3r.jpg" alt="aa"><p class="ani">سروال مع ساعة وجوارب وحداء<br>70$</p></div>
+                <div class="ee"><img title="فوقية باردة و رائعة دات جودة جيدة" class="imag" src="ملابس الحج الرجال/fo9ya.webp" alt="aa"><p class="ani">فوقية باردة و دات جودة جيدة<br>50$</p></div>
+                <div class="ee"><img title="غندورة مغربية من صنع اليد" class="imag" src="ملابس الحج الرجال/foukya2.jpg" alt="aa"><p class="ani">غندورة مغربية من صنع اليد<br>50$</p></div>
+                <div class="ee"><img title="طاقية مغربية دات جودة ممتازة" class="imag" src="ملابس الحج الرجال/ta9ya.jpeg" alt="aa"><p class="ani">طاقية مغربية دات جودة ممتازة<br>10$</p></div>
             </ul><br><br>
     
             </div>   
