--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
             <ul class="zz">
                 <h1 >فنادق بالقرب من مكة</h1></ul>
             <ul class="zz">  
-                <div class="ee"><img title="فندق دار التوحيد إنتركونتينتال" class="imag" src="hotels/dar-taw7id.jpg" alt="aa"><p class="ani">فندق دار التوحيد إنتركونتينتال<br>3,764 MAD</p></div>
-                <div class="ee"><img title="Makkah Hotel" class="imag" src="hotels/hotel-makkah.jpg" alt="aa"><p class="ani">Makkah Hotel<br>2,694 MAD</p></div>
+                <div class="ee" ><a href="https://ar.tripadvisor.com/Hotel_Review-g293993-d318857-Reviews-InterContinental_Dar_al_Tawhid_Makkah_an_IHG_Hotel-Mecca_Makkah_Province.html" target="_blank"><img  title="فندق دار التوحيد إنتركونتينتال" class="imag" src="hotels/dar-taw7id.jpg" alt="aa"><p class="ani">فندق دار التوحيد إنتركونتينتال<br>3,764 MAD</p></a></div>
+                <div class="ee"><a href="https://www.booking.com/hotel/sa/makkah-hotel.fr.html"><img title="Makkah Hotel" class="imag" src="hotels/hotel-makkah.jpg" alt="aa"><p class="ani">Makkah Hotel<br>2,694 MAD</p></a></div>
                 <div class="ee"><img title="Address Jabal Omar Makkah" class="imag" src="hotels/jabal-omar.jpg" alt="aa"><p class="ani">Address Jabal Omar<br>2,155 MAD</p></div>
                 <div class="ee"><img title="فندق قصر مكة رافلز" class="imag" src="hotels/qasser-makkah.jpg" alt="aa"><p class="ani">فندق قصر مكة رافلز<br>4,522 MAD</p></div>
             </ul><br><bp>
@@ -122,18 +122,20 @@
     <nav id="contact" class="prlm">
         <div ><h1><textarea class="commentaire"  placeholder="ملاحظاتك"></textarea></h1></div>
         <div class="email">
-            <ul><input placeholder="ur email" class="input" type="email"><br><br><input placeholder="ur password" class="input" type="password"><br><br><il class="send" type="button">send</il></ul>
+            <ul><input placeholder="ur email" class="input" type="email"><br><br><input placeholder="ur password" class="input" type="password"><br><br>
+                <il class="send" type="button">conecte</il>
+            </ul>
         </div>
             <div id="footer-above">
             <div class="tawassol">
                 <h3>Find me on</h3>
                 <ul id="contact">
-                    <li><a class="button social" href="#"><i class="fa fa-fw fa-linkedin"></i></a></li>
-                    <li><a class="button social" href="#"><i class="fa fa-fw fa-github"></i></a></li>
-                    <li><a class="button social" href="#"><i class="fa fa-fw fa-twitter"></i></a></li>
-                    <li><a class="button social" href="#"><i class="fa fa-facebook-official"></i></a></li>
+                    <li><a class="button social" href="https://www.facebook.com/abdlwahd.hossni?mibextid=ZbWKwL" target="_blank"><i class="fa fa-fw fa-facebook"></i></a></li>
+                    <li><a class="button social" href="https://www.instagram.com/hossni.abdo?igsh=dTluM29hbmplNWJy" target="_blank"><i class="fa fa-fw fa-instagram"></i></a></li>
+                    <li><a class="button social" href="https://wa.me/qr/PM7AKUW4KOQXG1" target="_blank"><i class="fa fa-fw fa-whatsapp"></i></a></li>
+                    <li><a class="button social" href="https://t.me/+212696791587" target="_blank"><i class="fa fa-telegram"></i></a></li>
                 </ul>
             </div>
         </div>
     </nav>    
-</footer>
+</footer> 
