--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
     <div><img class="back-ground-pc" src="back-ground/back-ground-pc.jpg" alt="#"></div>
+    <div><img class="back-ground-phone" src="back-ground/back-ground-phone.jpg" alt="#"></div>
     <nav class="links">
         <label ><a class="menu-f" href="#rijal">ملابس الرجال</a></label>
         <label ><a class="menu-f" href="#nissae">ملابس الحج النساء</a></label>
