--- a/index.html
+++ b/index.html
@@ -73,14 +73,14 @@
             <ul class="zz">  
                 <div class="ee" ><a href="https://ar.tripadvisor.com/Hotel_Review-g293993-d318857-Reviews-InterContinental_Dar_al_Tawhid_Makkah_an_IHG_Hotel-Mecca_Makkah_Province.html" target="_blank"><img  title="فندق دار التوحيد إنتركونتينتال" class="imag" src="hotels/dar-taw7id.jpg" alt="aa"><p class="ani">فندق دار التوحيد إنتركونتينتال<br>3,764 MAD</p></a></div>
                 <div class="ee"><a href="https://www.booking.com/hotel/sa/makkah-hotel.fr.html"><img title="Makkah Hotel" class="imag" src="hotels/hotel-makkah.jpg" alt="aa"><p class="ani">Makkah Hotel<br>2,694 MAD</p></a></div>
-                <div class="ee"><img title="Address Jabal Omar Makkah" class="imag" src="hotels/jabal-omar.jpg" alt="aa"><p class="ani">Address Jabal Omar<br>2,155 MAD</p></div>
-                <div class="ee"><img title="فندق قصر مكة رافلز" class="imag" src="hotels/qasser-makkah.jpg" alt="aa"><p class="ani">فندق قصر مكة رافلز<br>4,522 MAD</p></div>
+                <div class="ee"><img href="https://www.addresshotels.com/en/offers/ramadan-early-bird-offer-15-stay-iftar/?hotel=address-jabal-omar-makkah&utm_source=google&utm_medium=cpc&utm_campaign=assembly_google_search_address_makkah_en_brand_exact&gad_source=1&gclid=Cj0KCQjwwMqvBhCtARIsAIXsZpY21js3xYWoNn27KBxdAJH1R0oMNHr_lOwLruuV5DHe7GrvdnCJ5FAaAnihEALw_wcB" target="_blank" title="Address Jabal Omar Makkah" class="imag" src="hotels/jabal-omar.jpg" alt="aa"><p class="ani">Address Jabal Omar<br>2,155 MAD</p></div>
+                <div class="ee"><img href="https://www.booking.com/city/sa/mecca.ar.html?aid=325250;label=mecca-KyypB30*9OyE8Q9acy0jRwS393284191420:pl:ta:p1:p2:ac:ap:neg:fi:tikwd-26081888956:lp1009974:li:dec:dm:ppccp=UmFuZG9tSVYkc2RlIyh9YfNeh-lbHkPZBh1Z24Ekd1M;ws=&gad_source=1&gclid=Cj0KCQjwwMqvBhCtARIsAIXsZpaHjTCqoHddYGuOslpDowpqoTFL8PmqS3XfBE0taSnBnv4Txxz2CisaAjgnEALw_wcB" target="_blank" title="فندق قصر مكة رافلز" class="imag" src="hotels/qasser-makkah.jpg" alt="aa"><p class="ani">فندق قصر مكة رافلز<br>4,522 MAD</p></div>
             </ul><br><bp>
             <ul class="zz">
-                <div class="ee"><img title="فندق صفوة الغفران مكة" class="imag" src="hotels/safwa.jpg" alt="aa"><p class="ani">فندق صفوة الغفران مكة<br>2,657 MAD</p></div>
-                <div class="ee"><img title="جميرا مكة" class="imag" src="hotels/jmira.jpg" alt="aa"><p class="ani">جميرا مكة<br>2,880 MAD</p></div>
-                <div class="ee"><img title="سويس اوتيل" class="imag" src="hotels/swiss.jpg" alt="aa"><p class="ani">سويس اوتيل<br>5000 MAD</p></div>
-                <div class="ee"><img title="حياة ريجنسي" class="imag" src="hotels/rinjissi.jpg" alt="aa"><p class="ani">حياة ريجنسي<br>1000 MAD</p></div>
+                <div class="ee"><img href="https://www.ghufran-makkah.com/ar" target="_blank" title="فندق صفوة الغفران مكة" class="imag" src="hotels/safwa.jpg" alt="aa"><p class="ani">فندق صفوة الغفران مكة<br>2,657 MAD</p></div>
+                <div class="ee"><img href="https://mira-ajyad-mecca.albooked.com/" target="_blank" title="جميرا مكة" class="imag" src="hotels/jmira.jpg" alt="aa"><p class="ani">جميرا مكة<br>2,880 MAD</p></div>
+                <div class="ee"><img href="https://www.booking.com/hotel/sa/swissotel-makkah.ar.html" target="_blank" title="سويس اوتيل" class="imag" src="hotels/swiss.jpg" alt="aa"><p class="ani">سويس اوتيل<br>5000 MAD</p></div>
+                <div class="ee"><img href="https://www.booking.com/hotel/ma/hyatt-regency-ccsablanca.ar.html" target="_blank" title="حياة ريجنسي" class="imag" src="hotels/rinjissi.jpg" alt="aa"><p class="ani">حياة ريجنسي<br>1000 MAD</p></div>
             </ul><br><br>
     
             </div>   
